# my_picallo

./: Makefile  README.md  docker-compose.yml  main.py  piccolo_conf.py  piccolo_conf_test.py  pyproject.toml  setup.cfg
home/: tables.py
home/piccolo_migrations/: 2022-12-16T23-28-29-812125.py
